--- a/report/sections/4_future_potential.tex
+++ b/report/sections/4_future_potential.tex
@@ -28,3 +28,12 @@
 % For example, when somebody thinks about an “orange”, for example, their brains activate representations for a colour, and a shape, and a fruit, and other associations. By identifying these “thought components” and using machine learning, they can predict with high accuracy what object the person is thinking about. They have gone further with this, decomposing human emotion into a “basis set” of three components that they call “Valence” (is it good or bad), “Arousal” and “Social Interaction”.
 %
 % What really surprises me is that the exact same places of a brain are active for the same abstract concepts from one person to the next. That is, when I think of an “orange” and parts of my cortex light up corresponding to shape, colour, texture, etc…the exact same places in your brain light up to represent the same abstract concepts! It would appear that while the human brain must learn these concepts, the location for where the learning occurs is genetically determined.
+
+
+% +--- PPU (Pattern Processing Unit)
+% |
+% V
+
+% ref: https://www.youtube.com/watch?v=CFSrC7kjbJo ("Introduction to AHaH Computing, Alex Nugent, RIT, April 2015")
+%
+% > memristors empower (not replace) our digital computers.
