--- a/report/sections/4_future_potential/1_intelligent_systems.tex
+++ b/report/sections/4_future_potential/1_intelligent_systems.tex
@@ -2,6 +2,18 @@
 
 Intelligence defined by ability to make predictions, not behaviour \cite{intelligence_is_prediction}.
 
+% ref: https://www.youtube.com/watch?v=R7HxFhVQVr4 ("Why AHaH computing?")
+%
+% > Traditional computing would go an inch while biology is able to circle the world.
+%
+% > Effective intelligence.
+
+% ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
+%
+% How do we reach the power efficiency of a brain. "Don't simulate a brain, build a brain"
+%
+% We need to build a brain where the distance between memory and computation is 0.
+
 % ref: http://knowm.org/the-constraints-for-neuromorphic-computing-systems-have-suddenly-changed/
 %
 % In almost every machine learning algorithm or program, there lies an equation that looks something like this:
