--- a/report/sections/4_future_potential/2_energy_efficiency.tex
+++ b/report/sections/4_future_potential/2_energy_efficiency.tex
@@ -10,6 +10,33 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 %
 % Down to 50 Angstroms device size theoretically possible.
 
+% ref: https://www.youtube.com/watch?v=YOKr8n6Juhs ("Why is AHaH computing so efficient?")
+%
+% > Communication is way faster in technology than biology. 1 sec football field, 1 sec 7 times around the world.
+% >
+% > Neuron body: 4000-100 000 nm
+% > Synapses: 500 nm
+% > Viruses: 400-40 nm
+% > Transistor: 28 nm
+% >
+% > If faster and smaller, why so inefficient?
+% >
+% > Currents naturally sum. The values are reduced to specific resistances.
+% >
+% > Memristor
+% >
+% > Measures the combined current.
+% >
+% > Memristors can radically reduce total communication distance for some problems (not all).
+% >
+% > Reduce voltage makes a big impact, since it's the voltage squared.
+% >
+% > E=(C*V^2)/2
+% >
+% > biology: 0.065V
+% > computer: 1.2 v (18x biology) 18^2 -> 324.
+% >
+% > Reduce the communication distance and voltage.
 
 %The brain, parallel, error correcting, memory efficient. (not doing a lot of unnecessary data shuffling?)
 
