report: Add initial motivation behind interest in memristor research.

--- a/report/references.bib
+++ b/report/references.bib
@@ -318,3 +318,10 @@
   year={1977},
   publisher={Academic Press}
 }
+
+@inproceedings{memristors_a_new_frontier,
+  title={Memristor Technology - A New and Exciting Frontier},
+  author={Tim Molter},
+  booktitle={Workshop on Memristor Technology, Design, Automation And Computing (MemTDAC) Affiliated with the HiPEAC 2016 conference, (Jan 2016)},
+  year={2016}
+}
