report: Sort references alphabetically rather than in order of occurrence.
On Arch, install "texlive-publishers" to get the required bibtex styles.

--- a/report/preamble.sty
+++ b/report/preamble.sty
@@ -15,7 +15,7 @@
 \usepackage[nottoc]{tocbibind}
 
 % Use IEEE-style references.
-\bibliographystyle{ieeetr}
+\bibliographystyle{IEEEtranS}
 
 % Import images.
 %
