--- a/report/sections/4_future_potential/2_energy_efficiency.tex
+++ b/report/sections/4_future_potential/2_energy_efficiency.tex
@@ -87,7 +87,7 @@ Network in its true sense, \textit{the net is doing all the work} \cite{net_doin
 % 384 neurons
 % 100 000 plastic synapses
 % 10.000 - 100.000 real-time
-% put and pray into Laptop with USB.
+% plug and pray into Laptop with USB.
 %
 % Neuromorphic computing
 % Consistent concept for non-von Neumann, non-Turing computer architecture.
