report: Move Artificial Synapses section into a dedicated file. Comment out future potential for now.

--- a/report/sections/1_introduction/1_aim_and_objectives.tex
+++ b/report/sections/1_introduction/1_aim_and_objectives.tex
@@ -1,11 +1,15 @@
 \subsection{Aim and Objectives}
 
-The aim of the project is to investigate the current capabilities and future potential of artificial models for associative memory.
+
+%The aim of the project is to investigate the current capabilities and future potential of artificial models for associative memory.
+The aim of the project is to investigate the current capabilities of artificial models for associative memory.
 
 The achieve this aim, the following objectives have been identified.
 
 \begin{enumerate}
 	\item Outline key models for associative memory from different fields of research (e.g. Hopfield, memristors, ...).
-	\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
-	\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
+	% TODO: Remove in favour of "... to that of human potential" objective.
+	\item Evaluate the current capabilities of the models for associative memory both in terms of their capacity to store correlated information and in terms of the applications in which they've been used.
+	%\item Compare the capabilities of the ``state of the art'' models for associative memory to that of human potential.
+	%\item Discuss future possibilities if models for associative memory were to reach human or post-human potential.
 \end{enumerate}
