--- a/report/sections/3_current_capabilities.tex
+++ b/report/sections/3_current_capabilities.tex
@@ -1,6 +1,6 @@
 \section{Current Capabilities}
 
-The current capabilities of the three different models are described both in terms of their capacity to recall associative memories, and in terms of concrete applications for which the models have been used. Comparisons against human-level capabilities are discussed in \ref{sec:future_potential}.
+The current capabilities of the three different models are described both in terms of their capacity to recall associative memories, and in terms of concrete applications for which the models have been used. %Comparisons against human-level capabilities are discussed in \ref{sec:future_potential}.
 
 % === [ Subsections ] ==========================================================
 
