report: Organize notes related to the memristor model.

--- a/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
+++ b/report/sections/2_models_of_associative_memory/3_memory_resistor.tex
@@ -24,6 +24,8 @@ Back in 1971, Leon Chua, often referred to as the father of non-linear circuit t
 
 Ever since 2008, there has been an exponential increase in research related to memristors, where the number of search results for ``memristor'' on Google Scholar has doubled every 18-24 months \cite{memristors_a_new_frontier}. Why are so many researchers attracted to this new field, and what motivates such a profound investment of time and resources into this research?
 
+% TODO: Discripancy between computers and biology in terms of energy efficiency when used for highly adaptive systems, such as a synaptic network.
+
 % ref: Tim Molter HiPeac Prague 2016 Memristor Keynote
 %
 % Denser memory, faster read and write, lower energy use, non-volatile, and may represent continuous (i.e. not 0 and 1).
