report: Add motivaiton behind increase in memristor research.

--- a/report/references.bib
+++ b/report/references.bib
@@ -325,3 +325,22 @@
   booktitle={Workshop on Memristor Technology, Design, Automation And Computing (MemTDAC) Affiliated with the HiPEAC 2016 conference, (Jan 2016)},
   year={2016}
 }
+
+@inproceedings{facenet,
+  title={Facenet: A unified embedding for face recognition and clustering},
+  author={Schroff, Florian and Kalenichenko, Dmitry and Philbin, James},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={815--823},
+  year={2015}
+}
+
+@article{alphago,
+  title={Mastering the game of Go with deep neural networks and tree search},
+  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  journal={Nature},
+  volume={529},
+  number={7587},
+  pages={484--489},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
