report: Add PDF of report and presentation.

--- a/report/report.tex
+++ b/report/report.tex
@@ -4,6 +4,7 @@
 
 \title{Models of Associative Memory}
 \author{Wenting Jin, Lucas Arnström \& Robin Eklind}
+\date{2016-06-03}
 
 \begin{document}
 
